[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]



[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
        ]

[project]
authors = [{name = "Till Stensitzki", email="mail.till@gmx.de"}]
description = "Add a short description here"
name = "MessPy"
version = "0.1.0"


[tool.pixi.tasks]
start = "python start.py"
build = { cmd = ["python", "_build_pt.py"], cwd = "MessPy/Instruments/cam_phasetec"}

[tool.pixi.dependencies]
python = ">=3.13.9,<3.14"
numba = ">=0.62.1,<0.63"
lmfit = ">=1.3.4,<2"
cffi = ">=2.0.0,<3"
pyside6 = ">=6.9.3,<7"
attrs = ">=25.4.0,<26"
wrapt = ">=2.0.1,<3"
pytest = ">=9.0.1,<10"
pytest-qt = ">=4.5.0,<5"
h5py = ">=3.15.1,<4"
loguru = ">=0.7.3,<0.8"
qtawesome = ">=1.4.0,<2"
qasync = ">=0.28.0,<0.29"
pyserial = ">=3.5,<4"
matplotlib = ">=3.10.8,<4"
magicgui = ">=0.10.1,<0.11"
colorcet = ">=3.1.0,<4"
requests = ">=2.32.5,<3"


[tool.pixi.pypi-dependencies]
nicelib = ">=0.7.1, <0.8"
nidaqmx = ">=1.3.0, <2"
pyqtgraph = ">=0.14.0, <0.15"
MessPy = { path = ".", editable = true }

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]
